[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/s_main/default_env.tres" type="Environment" id=1]
[ext_resource path="res://scenes/s_main/s_main.gd" type="Script" id=2]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://rooms/RM1.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/assets/fps_counter/FPS_Counter.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/s_main/scripts/spawner.gd" type="Script" id=6]
[ext_resource path="res://textures/roof.tres" type="Material" id=8]

[sub_resource type="PlaneMesh" id=1]

[node name="S_Main" type="Spatial"]
script = ExtResource( 2 )

[node name="ArenaGeometry" type="Spatial" parent="."]

[node name="RM1" parent="ArenaGeometry" instance=ExtResource( 4 )]

[node name="main" type="Spatial" parent="ArenaGeometry"]
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/main"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19.7099 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/main"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, 19.71 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/main"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, 0 )

[node name="small0" type="Spatial" parent="ArenaGeometry"]
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/small0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, -19.71 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/small0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, 0 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/small0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -19.71 )

[node name="small2" type="Spatial" parent="ArenaGeometry"]
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/small2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39.5158, 0, -39.4918 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/small2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39.5483, 0, -19.7957 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/small2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39.5561, 0, -0.0153284 )

[node name="small1" type="Spatial" parent="ArenaGeometry"]
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/small1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, -19.71 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/small1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, 19.71 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/small1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -319.121, -19.71 )

[node name="medium1" type="Spatial" parent="ArenaGeometry"]
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/medium1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, -39.42 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/medium1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.42 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/medium1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, -39.42 )

[node name="medium6" type="Spatial" parent="ArenaGeometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -19.71 )
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/medium6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, -39.42 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/medium6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.42 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/medium6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, -39.42 )

[node name="medium7" type="Spatial" parent="ArenaGeometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.42 )
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/medium7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, -39.42 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/medium7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.42 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/medium7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, -39.42 )

[node name="medium3" type="Spatial" parent="ArenaGeometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 78.8341, 0, 0 )
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/medium3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39.42, 0, 0 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/medium3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39.42, 0, 19.71 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/medium3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39.42, 0, -19.71 )

[node name="medium2" type="Spatial" parent="ArenaGeometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 78.84 )
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/medium2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, -39.42 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/medium2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.42 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/medium2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, -39.42 )

[node name="medium4" type="Spatial" parent="ArenaGeometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 98.55 )
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/medium4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, -39.42 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/medium4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.42 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/medium4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, -39.42 )

[node name="medium5" type="Spatial" parent="ArenaGeometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 118.26 )
script = ExtResource( 6 )

[node name="POS1" type="Position3D" parent="ArenaGeometry/medium5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.71, 0, -39.42 )

[node name="POS2" type="Position3D" parent="ArenaGeometry/medium5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.42 )

[node name="POS3" type="Position3D" parent="ArenaGeometry/medium5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.71, 0, -39.42 )

[node name="Lighting" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Lighting"]
environment = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="Lighting"]
transform = Transform( 0.965926, 0.198266, 0.166365, -2.09447e-07, -0.642788, 0.766044, 0.258818, -0.739942, -0.620885, 2.17494, 9.39172, -2.14115 )
light_energy = 2.0
shadow_color = Color( 0.6, 0.6, 0.6, 1 )

[node name="roof" type="MeshInstance" parent="."]
transform = Transform( -25319.1, 0.00136776, 0, -0.000144909, -73.7301, 0, 0, 0, 25703.8, 0, 7.94689, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85704, 0 )

[node name="FPS_Counter" parent="." instance=ExtResource( 5 )]
